# grey

./: .gitignore  README.md  main.py  pyproject.toml  requirments.txt
ingestion/: pdf_loader.ipynb  yt_fetcher.ipynb
src/core/: config.py  constants.py  exceptions.py
src/ingestion/processors/: document_processor.py  text_processor.py  video_analyzer.py
src/processing/: chunker.py  embedder.py
src/retrieval/: retriever.py  vector_store.py
