[project]
name = "grey"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "docling>=2.75.0",
    "ipykernel>=7.2.0",
    "pydantic-settings",
    "pytube>=15.0.0",
    "setuptools>=82.0.0",
    "youtube-transcript-api>=1.2.4",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
