[project]
name = "grey"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "docling>=2.75.0",
    "dotenv>=0.9.9",
    "gradio>=6.9.0",
    "ipykernel>=7.2.0",
    "langchain>=1.2.10",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.16",
    "langchain-nvidia-ai-endpoints>=1.1.0",
    "langchain-text-splitters>=1.1.1",
    "openai>=2.26.0",
    "pandas>=2.3.3",
    "pydantic-settings",
    "pytube>=15.0.0",
    "qdrant-client>=1.17.0",
    "setuptools>=82.0.0",
    "tiktoken>=0.12.0",
    "youtube-transcript-api>=1.2.4",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
